# mgsc-js

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  index.html  jsdoc.config.json  package-lock.json  package.json  tsconfig.json  typedoc.json  webpack.config.js
docs/: MGSC.html  classes.list.html  global.html  index.html  quicksearch.html
docs/api/: index.html  modules.html
docs/api/assets/: highlight.css  search.js
docs/api/classes/: MGSC.html
docs/api/functions/: decodeText.html  detectEncoding.html  toTextDecoderEncoding.html
docs/api/types/: CompilerResult.html  TextDecoderEncoding.html
lib/: libmgsc.d.ts
src/: bridge.cpp  cmd.ts  encoding-detect.ts  entry.js  index.d.ts  index.js  index.ts  main.js  mgsc_module.js  module.ts
